@@ -67,7 +67,9 @@
 "blog/add","us_EN","blog_login_check","check"
 "dashboard/index","us_EN","no_registered_blog","No registered <b>blog</b>"
 "dashboard/index","us_EN","new_blog_instruction","to add a new blog, or use the item \"blogs\" in menu"
-"dashboard/index","us_EN","feed_add","feed add"
+"dashboard/index","us_EN","feed_add","add"
 "dashboard/index","us_EN","feed_add_form_title","Feed add"
 "dashboard/index","us_EN","feed_add_url","URL"
 "dashboard/index","us_EN","feed_not_found","Feed not found"
+"dashboard/index","us_EN","view_feed_item","view"
+"dashboard/index","us_EN","publish_queue_item","publish"
