@@ -146,3 +146,12 @@ HORAS TRABALHADAS: 8h
 - Inicio de implementacao de webservices para publicacao de itens do queue
 
 HORAS TRABALHADAS: 3h
+
+==========
+24/04/2009
+==========
+
+- Bugfixes
+- Implementacao de webservices para publicacao de itens do queue
+
+HORAS TRABALHADAS: 2h
